# goldmarketcap

./: .gitignore  README.md  docker-compose.backend-local.yml  docker-compose.yml  env.template
archive/: main.py  model.py
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  __main__.py  config.py  database.py  dependencies.py  main.py  models.py  schemas.py  security.py
backend/app/api/: __init__.py  routes.py
backend/app/services/: collector.py  price_tracker.py
docs/: CHART_IMPROVEMENTS.md  PERFORMANCE_OPTIMIZATIONS.md
frontend/: .dockerignore  Dockerfile  next.config.js  package.json  tailwind.config.js  tsconfig.json
frontend/app/: env-script.tsx  error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx  runtime-env.tsx
frontend/app/api/config/: route.ts
frontend/app/chart/[source]/: page.tsx
frontend/components/: AnalyticsCards.tsx  CandlestickChart.tsx  LatestPricesTable.tsx  MinuteChart.tsx  PriceHistoryChart.tsx
